# TPark

./: .gitignore
.circleci/: config.yml
algorithms-and-structures/: .gitignore
algorithms-and-structures/module_1/: .gitignore
algorithms-and-structures/module_1/task_1/: main.cpp
algorithms-and-structures/module_1/task_2/: main.cpp
algorithms-and-structures/module_1/task_3/: main.cpp
algorithms-and-structures/module_1/task_4/: CMakeLists.txt  main.cpp
c++/: .gitignore  README.md
c++/Architecture/Utils/: DataClasses.h
c++/Architecture/Wrappers/: DBWrapper.h  StorageWrapper.h
c++/Architecture/Wrappers/DBWrapperRealisations/: PostgreDBManager.h  PostgreDBWrapper.h
c++/Architecture/Wrappers/StorageWrapperRealisations/: AmazonS3StorageWrapper.h
c++/hw-1/: .gitignore  CMakeLists.txt  main.c
c++/hw-1/Google_tests/: CMakeLists.txt  sample_test.cpp
c++/hw-1/source_lib/: CMakeLists.txt  config_sort.c  config_sort.h  io_manager.c  io_manager.h  soft_config.h  source.c
